# FIRe

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: TODO.md  inverse3_setup.md  inverse3_teleoperator.md  residual_rl_architecture.md  residual_rl_hil_serl_gap_analysis.md
fire_deploy/: .gitignore  .gitmodules  AGENTS.md  README.md
fire_deploy/docs/: inverse3_teleoperator.md  local_commands.md
fire_deploy/scripts/: play.py  record.py  run_vision_server.py
fire_deploy/src/FIRe/lerobot_ft_sensor/: README.md  pyproject.toml
fire_deploy/src/FIRe/lerobot_ft_sensor/src/lerobot_ft_sensor/: __init__.py  configuration_ft_sensor.py  ft_sensor.py
fire_deploy/src/FIRe/lerobot_ft_sensor/test/: test_lerobot_ft_sensor.py
fire_deploy/src/FIRe/lerobot_robot_fr3/: pyproject.toml
fire_deploy/src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/: __init__.py
fire_deploy/src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/: __init__.py  base_task.py
fire_deploy/src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/factory/: factory_cfg.py
fire_deploy/src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/forge/: forge.py
fire_deploy/src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/pick_place/: pick_place.py  pick_place_cfg.py
fire_deploy/src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/utils/: camera_sensor_manager.py  robot_state_manager.py
fire_deploy/src/FIRe/lerobot_robot_fr3/test/: test_zmq_camera.py
fire_deploy/src/FIRe/lerobot_teleoperators/lerobot_teleoperator_keyboard/: pyproject.toml
fire_deploy/src/FIRe/lerobot_teleoperators/lerobot_teleoperator_keyboard/src/lerobot_teleoperator_keyboard/: __init__.py
fire_deploy/src/FIRe/vision_server/: __init__.py
fire_lab/: README.md
fire_lab/scripts/reinforcement_learning/: random_agent.py  zero_agent.py
fire_lab/scripts/reinforcement_learning/rsl_rl/: play.py
scripts/: compare_obs.py  dummy_inference.py  play.py  play_backup.py  play_factory.py  play_real.py  play_with_csv.py  plot_campare.py  plot_campare_factory.py  plot_campare_forge.py  plot_data.py  plot_log.py  push_to_hub.py  record.py  run_vision_server.py  teleop_test.py  train_residual_actor.py  train_residual_learner.py
scripts/configs/: traj_save.csv
scripts/imitation_learning/isaaclab_mimic/: annotate_demos.py  generate_dataset.py
scripts/plot/: plot_data.py  plot_gr00t_dataset.py
scripts/reinforcement_learning/: list_envs.py
scripts/reinforcement_learning/rl_games/: play.py  train.py
scripts/reinforcement_learning/rsl_rl/: train.py
scripts/tools/: record_demos.py  replay_demos.py
source/fire_lab/: setup.py
source/fire_lab/config/: extension.toml
source/fire_lab/fire_lab/: ui_extension_example.py
src/FIRe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/FIRe/fire_core/: pyproject.toml
src/FIRe/fire_core/src/fire_core/: checkpoints.py  inference.py  logger.py  loop.py  strategies.py  vla_observation.py
src/FIRe/fire_core/src/fire_core/io/: recorder.py
src/FIRe/fire_core/src/fire_core/recorders/: __init__.py  base_recorder.py  gr00t_exporter.py  gr00t_recorder.py  pi05_recorder.py  utils.py
src/FIRe/fire_core/src/fire_core/residual_rl/: __init__.py  action.py  actor.py  config.py  features.py  learner.py
src/FIRe/fire_core/src/fire_core/utils/: shared_state.py  utils.py
src/FIRe/fire_core/src/fire_core/vla_clients/: gr00t_service.py  openvla_service.py  pi05_service.py
src/FIRe/fire_core/src/fire_core/vla_clients/openvla/: __init__.py
src/FIRe/lerobot_camera_logi/: pyproject.toml
src/FIRe/lerobot_ft_sensor/: README.md  pyproject.toml
src/FIRe/lerobot_ft_sensor/src/lerobot_ft_sensor/: __init__.py  configuration_ft_sensor.py  ft_sensor.py
src/FIRe/lerobot_ft_sensor/src/lerobot_ft_sensor/config/: bota_binary.json
src/FIRe/lerobot_ft_sensor/src/lerobot_ft_sensor/utils/: ft_sensor_manager.py
src/FIRe/lerobot_ft_sensor/test/: test_lerobot_ft_sensor.py
src/FIRe/lerobot_policy_gr00t/: CLAUDE.md  pyproject.toml
src/FIRe/lerobot_policy_gr00t/src/lerobot_policy_gr00t/: configuration_gr00t.py  gr00t_n1.py  modeling_gr00t.py  processor_franka.py  processor_gr00t.py
src/FIRe/lerobot_policy_gr00t/src/lerobot_policy_gr00t/action_head/: flow_matching_action_head.py
src/FIRe/lerobot_robot_fr3/: pyproject.toml
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/: __init__.py  config_fr3.py  fr3.py  fr3_factory.py  fr3_forge.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/: __init__.py  base_task.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/factory/: factory.py  factory_cfg.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/forge/: __init__.py  forge.py  forge_cfg.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/pick_place/: pick_place.py  pick_place_cfg.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/pick_place/agents/: pick_place.yaml
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/tasks/reach/: reach.py  reach_cfg.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/utils/: __init__.py  camera_sensor_manager.py  math_utils.py  robot_state_manager.py  rotation_utils.py  sensor_manager.py  transformation_utils.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/utils/runner/: utils.py
src/FIRe/lerobot_robot_fr3/src/lerobot_robot_fr3/utils/vla_client/: __init__.py
src/FIRe/lerobot_robot_fr3/test/: test_lerobot_robot_fr3.py
src/FIRe/lerobot_teleoperators/lerobot_teleoperator_keyboard/: pyproject.toml
src/FIRe/lerobot_teleoperators/lerobot_teleoperator_keyboard/src/lerobot_teleoperator_keyboard/: configuration_keyboard.py  keyboard.py
src/FIRe/runners/: pyproject.toml
src/FIRe/runners/src/runners/: __init__.py  rl_runner.py  vla_runner.py
src/FIRe/runners/src/runners/utils/: __init__.py
src/FIRe/vision_server/: pyproject.toml  vision_server.py
test/: test_lerobot_ft_sensor.py  test_lerobot_robot_fr3.py  test_zmq_camera.py
(+50 files in other folders)
