[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FIRe"
version = "0.1.0"
description = "Force Informed Residual Model"
dependencies = [
    "torch",
    "numpy",
    "lerobot==0.4.4",
    "rl_games",
    "opencv-python"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }