[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FIRe"
version = "0.1.0"
description = "Force Informed Residual Model"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "lerobot==0.4.4",
    "rl_games",
    "opencv-python"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.pytest.ini_options]
testpaths = [
    "src/FIRe/fire_core/test",
    "src/FIRe/lerobot_ft_sensor/test",
    "src/FIRe/lerobot_robot_fr3/test",
]
