[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_ft_sensor"
version = "0.1.0"
description = "Standalone LeRobot-compatible Bota force/torque sensor module"
requires-python = ">=3.10"
dependencies = [
    # ROS 2 (rclpy)는 시스템에 설치된 것을 사용하므로 여기에 적지 않습니다.
    "lerobot==0.4.4",
    # "numpy<2.0.0",
    "bota-driver"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
