[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_fr3"
version = "0.1.0"
description = "FR3 VLA Robot plugin for LeRobot using ROS 2"
requires-python = ">=3.10"
dependencies = [
    # ROS 2 (rclpy)는 시스템에 설치된 것을 사용하므로 여기에 적지 않습니다.
    "lerobot",
    "numpy",
    "bota-driver",
    "scipy",
    # "pinocchio"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }