[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runners"
version = "0.1.0"
description = "Inference runners for FIRe"
requires-python = ">=3.10"
dependencies = [
    # "numpy<2.0.0",
    "rl-games",
    "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }