[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_server"
version = "0.1.0"
description = "FR3 VLA Robot plugin for LeRobot using ROS 2"
requires-python = ">=3.12"
dependencies = [
    "lerobot",
    "numpy",
    "zmq",
    "pycocotools",
    "pyrealsense2"
]
