[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_ft_sensor"
version = "0.1.0"
description = "Standalone LeRobot-compatible Bota force/torque sensor module"
requires-python = ">=3.10"
dependencies = [
    # ROS 2 (rclpy) uses the system-installed version, so it is not listed here.
    "lerobot==0.4.4",
    # "numpy<2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
