[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_fr3"
version = "0.1.0"
description = "FR3 VLA Robot plugin for LeRobot using ROS 2"
requires-python = ">=3.10"
dependencies = [
    # ROS 2 (rclpy) uses the system-installed version, so it is not listed here.
    "lerobot==0.4.4",
    # "numpy<2.0.0",
    "scipy",
    # "pinocchio",
    "websockets",
    "msgpack",
    "zmq",
    "cycler",
    "kiwisolver",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
