[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperators"
version = "0.1.0"
description = "FIRe LeRobot-compatible teleoperators"
requires-python = ">=3.10"
dependencies = [
    "lerobot==0.4.4",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
