[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_keyboard"
version = "0.1.0"
description = "FIRe LeRobot-compatible teleoperator using keyboard"
requires-python = ">=3.10"
dependencies = [
    "lerobot==0.4.4",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
